--- a/src/components/main-container/main-container.css
+++ b/src/components/main-container/main-container.css
@@ -4,7 +4,7 @@
   justify-content: center;
 }
 
-.heading {
+/* .heading {
   color: rgb(36, 35, 35);
   display: flex;
   flex-direction: row;
@@ -12,19 +12,68 @@
   position: sticky;
   top: 0;
   background-color: white;
-}
+
+} */
 
 .nav-container {
   display: flex;
   flex-direction: row;
 }
 
+/* .office-container::before  {
+  background-image: url('./images/home_office.jpg');
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  min-height: 40rem; 
+  max-height: 150rem; 
+  background-attachment: scroll;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; 
+  content: "";
+  position: fixed;
+  z-index: -1;
+  color: white;
+  display: flex;
+  z-index: 0;
+  opacity: 0.8;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+}
 
-/* .home {
-  max-width: 10rem;
+.office-container {
+  margin-bottom: 3rem;
+  width: 100%;
+  height: auto;
+  min-height: 40rem; 
+  max-height: 100rem; 
+  box-sizing: border-box;
+  position: relative;
+  z-index: 0;
+  opacity: 0.8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.grey-container {
+  background-color: rgba(27, 27, 27, 0.8);
+  color: white;
+  height: 100%;
+  width: 100%;
+  padding: 1rem;
+  margin: 0;
+  border-radius: 5px;
+  z-index: 2;
+}
+
+.home {
+  max-width: 30rem;
   min-height: 20rem; 
   max-height: 80rem; 
-} */
+}
 
 .name {
   width: 50%;
@@ -52,14 +101,14 @@
   opacity: 1;
 }
 
-.cv {
+.resume {
   z-index: 2;
   min-height: 30rem; 
   max-height: 300rem; 
   max-width: 50rem;
 }
 
-.cv-item {
+.resume-item {
   margin: 0;
   padding: 1rem;
   justify-content: center;
@@ -87,14 +136,22 @@
   justify-content: space-between;
 }
 
+.skills {
+  list-style: none;
+  padding-left: 3rem;
+}
 
-/* .project-container {
+.skillName {
+  padding-left: 1rem;
+}
+
+.project-container {
   min-height: 30rem; 
   max-height: 100rem; 
   max-width: 70rem;
-} */
+}
 
-/* .projects {
+.projects {
   opacity: 1;
   color: white;
   display: flex;
@@ -169,6 +226,6 @@ a:hover {
 
 .icon {
   color: rgb(54, 53, 53);
-}  */
+} */
 
 
