--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+.footer {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  background-color: rgba(255, 255, 255, 0);
+  z-index: 3;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
+  min-width: 100%;
+  height: 3rem;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.social-links {
+  padding: 0.4rem;
 }
+
+.social {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+}
+.col {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+}
+
+.icon {
+  color: rgb(54, 53, 53);
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
