--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,51 +1,52 @@
-.home-container::before  {
-  background-image: url('../../images/profligacy.jpg');
-  box-sizing: border-box;
-  width: auto;
-  height: 100%;
-  min-height: 10rem; 
-  max-height: 150rem; 
-  background-attachment: scroll;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain; 
-  content: "";
-  position: fixed;
-  z-index: -1;
-  color: white;
-  display: flex;
-  z-index: 0;
-  opacity: 0.8;
-  margin: 0;
-  display: flex;
-  justify-content: center;
-}
 
 .home-container {
   margin-bottom: 3rem;
+  width: 100%;
+  min-height: 10rem; 
+  max-height: 100rem; 
+  background-size: 100%; 
+  /* box-sizing: border-box; */
+  position: fixed;
+  z-index: 0;
+  opacity: 0.9;
+}
+
+.home-image-container {
+  width: 70%;
+  margin-right: 1rem;
+  margin-left: 1rem;
+  margin-top: 0rem;
+  margin-bottom: 5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.home-image {
   width: auto;
-  height: 100%;
-  min-height: 40rem; 
+  height: 90%;
+  min-height: 10rem; 
   max-height: 100rem; 
   background-size: 50%; 
   box-sizing: border-box;
-  position: relative;
+  position: fixed;
   z-index: 0;
   opacity: 0.8;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  padding: 1rem;
+  border-radius: 2rem;
 }
 
-.grey-container {
-  background-color: rgba(27, 27, 27, 0.8);
-  color: white;
-  height: 30%;
-  width: 100%;
+.small-home-image {
+  width: auto;
+  height: 50%;
+  min-height: 10rem; 
+  max-height: 100rem; 
+  background-size: 50%; 
+  box-sizing: border-box;
+  position: fixed;
+  z-index: 0;
+  opacity: 0.8;
   padding: 1rem;
-  margin: 0;
-  border-radius: 5px;
-  z-index: 2;
+  border-radius: 2rem;
 }
 
 @media (prefers-reduced-motion: no-preference) {
