--- a/src/components/biography/biography.css
+++ b/src/components/biography/biography.css
@@ -1,11 +1,23 @@
-.App {
-  text-align: center;
+.bio-body {
+  padding: 2rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.bio-header {
+  padding-left: 2rem;
 }
+
+.bio-image {
+  height: 200px;
+  width: auto;
+  margin: 1rem;
+  border-radius: .3rem;
+}
+
+.bio-image-container {
+  justify-content: end;
+  display: flex;
+}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,26 +25,3 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
