--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -18,7 +18,7 @@
   margin-top: 0rem;
   margin-bottom: 5rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around; 
 }
 
 .home-image {
@@ -26,13 +26,28 @@
   height: 90%;
   min-height: 10rem; 
   max-height: 100rem; 
-  background-size: 50%; 
+  background-size: 0%; 
   box-sizing: border-box;
   position: fixed;
   z-index: 0;
-  opacity: 0.8;
+  opacity: 1;
   padding: 1rem;
   border-radius: 2rem;
+}
+
+.large-home-image {
+  width: auto;
+  height: 32rem;
+  min-height: 10rem; 
+  max-height: 35rem; 
+  background-size: 100%; 
+  /* box-sizing: content-box; */
+  position: fixed;
+  /* left: 12rem; */
+  z-index: 1;
+  opacity: 0.7;
+  border-radius: 2rem;
+  /* background-size: cover; */
 }
 
 .small-home-image {
@@ -43,15 +58,22 @@
   background-size: 50%; 
   box-sizing: border-box;
   position: fixed;
-  z-index: 0;
+  z-index: 2;
   opacity: 0.8;
   padding: 1rem;
   border-radius: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width: 780px) {
+  .home-image-container {
+    width: 40%;
+    margin:0;
+    display: flex;
+    justify-content: start; 
+  }
+
+  .home-image {
+    padding: 0;
   }
 }
 
