--- a/src/components/portfolio/portfolio-image.css
+++ b/src/components/portfolio/portfolio-image.css
@@ -11,6 +11,15 @@
   border-radius: .2rem;
 }
 
+.video {
+  max-height: 400px;
+  height: auto;
+  width: auto;
+  max-width: 400px;
+  margin: 1rem;
+  border-radius: .2rem;
+}
+
 .modal-image {
   max-height: 40rem;
   height: auto;
