--- a/src/components/main-container/main-container.css
+++ b/src/components/main-container/main-container.css
@@ -1,10 +1,41 @@
+@import url('https://fonts.googleapis.com/css?family=Gelasio');
+
 .app-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
 }
 
 .nav-container {
   display: flex;
   flex-direction: row;
+  align-items: center;
+}
+
+.home {
+  font-family: 'Gelasio', serif;
+  font-size: x-large;
+  color: rgb(54, 53, 53);
+  font-weight: bold;
+}
+
+a.heading.nav-link:focus {
+  color: grey;
+}
+
+a.nav-link:focus {
+  color: grey;
+}
+
+a.nav-link {
+  color: rgb(54, 53, 53);
+}
+
+a.heading.nav-link {
+  color: rgb(54, 53, 53);
 }
