--- a/src/components/portfolio/portfolio-image.css
+++ b/src/components/portfolio/portfolio-image.css
@@ -13,11 +13,12 @@
 
 .video {
   max-height: 400px;
-  height: auto;
-  width: auto;
   max-width: 400px;
   margin: 1rem;
   border-radius: .2rem;
+  position:static;
+  width:400px;
+  height:250px;
 }
 
 .modal-image {
@@ -26,7 +27,7 @@
   width: auto;
   max-width: 45rem;
   min-width: 19rem;
-  margin: .2rem;
+  margin: .5rem;
   border-radius: .2rem;
 }
 
@@ -57,20 +58,13 @@
 
   .image {
     max-height: 300px;
-    height: auto;
-    width: auto;
     max-width: 300px;
     margin: .5rem;
-    border-radius: .2rem;
   }
 
   .modal-image {
     max-height: 500px;
-    height: auto;
-    width: auto;
     max-width: 500px;
-    margin: .5rem;
-    border-radius: .2rem;
   }
 
   .modal-90w {
@@ -84,29 +78,25 @@
 @media screen and (max-width: 550px) {
 
   .modal-image {
-    max-height: 500px;
-    height: auto;
-    width: auto;
     max-width: 400px;
-    margin: .5rem;
-    border-radius: .2rem;
   }
 
   .modal-90w {
     max-height: 420px;
-    height: auto;
-    width: auto;
     max-width: 420px;
+  }
+
+  .video {
+    position: static;
+    width:300px;
+    height:165px;
   }
 }
 
 @media screen and (max-width: 420px) {
   .modal-image {
     max-height: 450px;
-    height: auto;
-    width: auto;
     max-width: 300px;
     margin: .2rem;
-    border-radius: .2rem;
   }
 }
