--- a/src/components/main-container/main-container.css
+++ b/src/components/main-container/main-container.css
@@ -9,6 +9,7 @@
   sans-serif;
 -webkit-font-smoothing: antialiased;
 -moz-osx-font-smoothing: grayscale;
+  font-size: 2rem;
 }
 
 .nav-container {
@@ -38,8 +39,25 @@ a.nav-link:focus {
 
 a.nav-link {
   color: rgb(54, 53, 53);
+  font-size: 4rem;
 }
 
 a.heading.nav-link {
   color: rgb(54, 53, 53);
+  font-size: 3rem;
 }
+
+
+@media screen and (max-width: 2000px) {
+  .app-container {
+    font-size: 1.5rem;
+  }
+
+  a.nav-link {
+    font-size: 2rem;
+  }
+  
+  a.heading.nav-link {
+    font-size: 1.5rem;
+  }
+} 
