--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -9,7 +9,7 @@
   position: fixed;
   bottom: 0;
   min-width: 100%;
-  height: 3rem;
+  height: 7rem;
   margin: 0;
   padding: 0;
 }
@@ -33,6 +33,8 @@
   color: rgb(54, 53, 53);
 }
 
-
-@media (prefers-reduced-motion: no-preference) {
+@media screen and (max-width: 1900px) {
+  .footer {
+    height: 3rem;
+  }
 }
