--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -22,10 +22,10 @@
 
 .home-image {
   width: auto;
-  height: 90%;
+  height: 100%;
   min-height: 10rem; 
   max-height: 100rem; 
-  background-size: 0%; 
+  background-size: 100%; 
   box-sizing: border-box;
   position: fixed;
   z-index: 0;
@@ -36,10 +36,11 @@
 
 .large-home-image {
   width: auto;
-  height: 30rem;
-  min-height: 10rem; 
-  max-height: 35rem; 
-  background-size: 100%; 
+  height: 70%;
+  min-height: 70rem; 
+  max-height: 100rem;  
+  background-size: 50%; 
+  box-sizing: border-box;
   position: fixed;
   z-index: 1;
   opacity: 0.7;
@@ -50,7 +51,7 @@
   width: auto;
   height: 50%;
   min-height: 10rem; 
-  max-height: 100rem; 
+  max-height: 70rem; 
   background-size: 50%; 
   box-sizing: border-box;
   position: fixed;
@@ -58,6 +59,23 @@
   opacity: 0.8;
   padding: 1rem;
   border-radius: 2rem;
+}
+
+@media screen and (max-width: 2400px) {
+  .large-home-image {
+    min-height: 10rem; 
+    max-height: 70rem; 
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .large-home-image {
+    width: auto;
+    height: 30rem;
+    min-height: 10rem; 
+    max-height: 35rem; 
+    background-size: 100%; 
+  }
 }
 
 @media screen and (max-width: 930px) {
@@ -75,6 +93,11 @@
   .large-home-image {
     height: 30rem;
     margin: 1;
+  }
+
+  .small-home-image {
+    width: auto;
+    height: 50%;
   }
 }
 
