--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -2,21 +2,43 @@
   margin-bottom: 5rem;
 }
 .thumbnail-image {
-  height: 200px;
+  height: 600px;
   width: auto;
   margin: 1rem;
   border-radius: .3rem;
 }
 
 .portfolio-image-container {
-  align-items: center;
   margin-right: 1rem;
   margin-left: 1rem;
   margin-top: 1rem;
   margin-bottom: 3rem;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.portfolio {
+  display: flex;
+}
+
+@media screen and (max-width: 2900px) {
+  .thumbnail-image {
+    height: 400px;
+  }
+}
+
+@media screen and (max-width: 1900px) {
+  .thumbnail-image {
+    height: 300px;
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .thumbnail-image {
+    height: 200px;
+  }
 }
 
 
