--- a/src/components/cv/cv.css
+++ b/src/components/cv/cv.css
@@ -10,7 +10,7 @@
 }
 
 .cv-container {
-  display: flex;
+  padding-bottom: 7rem;
 }
 
 .cv-body {
@@ -59,6 +59,25 @@
   z-index: 3;
 }
 
+@media screen and (max-width: 2800px) {
+  .cv-header {
+    font-size: 3rem;
+  }
+  
+  .cv-heading {
+    font-size: 2.5rem;
+  }
+
+  .cv-item {
+    font-size: 2rem;
+  }
+
+  .pdf {
+    font-size: 3rem;
+  }
+
+}
+
 @media screen and (max-width: 2000px) {
   .cv-header {
     font-size: 2rem;
@@ -70,18 +89,32 @@
 
   .cv-item {
     font-size: 1.5rem;
+    padding-left: 5rem;
   }
 
   .pdf {
     font-size: 2rem;
   }
 
+  .cv-container {
+    padding-bottom: 4rem;
+  }
+
 }
 
 @media screen and (max-width: 600px) {
+  .cv-header {
+    font-size: 1.5rem;
+  }
+
+  .cv-item {
+    padding-left: 1rem;
+    font-size: 1rem;
+  }
 
   .cv-heading {
     padding-left: 1rem;
+    font-size: 1.2rem;
   }
 
   .container {
@@ -91,6 +124,10 @@
 
   .item {
     padding-left: 1rem;
+  }
+
+  .pdf {
+    font-size: 1rem;
   }
 }
 
