--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -12,7 +12,7 @@
   margin-right: 1rem;
   margin-left: 1rem;
   margin-top: 1rem;
-  margin-bottom: 3rem;
+  margin-bottom: 7rem;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -33,6 +33,10 @@
   .thumbnail-image {
     height: 300px;
   }
+
+  .portfolio-image-container {
+    margin-bottom: 3rem;
+  }
 }
 
 @media screen and (max-width: 1400px) {
@@ -40,7 +44,6 @@
     height: 200px;
   }
 }
-
 
 @media screen and (max-width: 420px) {
   .modal-image {
@@ -51,6 +54,8 @@
 
   .portfolio-image-container {
     justify-content: center;
-    margin: 0;
+    margin-right: 0;
+    margin-left: 0;
+    margin-top: 0;
   }
 }
