--- a/src/components/portfolio/portfolio-image.css
+++ b/src/components/portfolio/portfolio-image.css
@@ -12,6 +12,10 @@
   border-radius: .2rem;
 }
 
+.image:hover {
+  cursor: grab;
+}
+
 .video {
   max-height: 1200px;
   max-width: 1200px;
@@ -68,6 +72,10 @@
   .image {
     max-height: 1000px;
     max-width: 1000px;
+  }
+  
+  .image:hover {
+    cursor: grab;
   }
   
   .video {
